Update to reflect new DDF structure.